# windmi-heatpump-controller

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Dockerfile.windows  LICENSE  Makefile  README.md  build_windows.sh  current_state_and_future_features.md  energy_registers_research_and_plan.md  mingw-w64-x86_64.cmake  windmi-control  windmi-control.html
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  windows-build.yml
.superpowers/brainstorm/3521718-1781196613/content/: schedule-mockup.html  schedule-v2.html
.superpowers/brainstorm/3521718-1781196613/state/: server-stopped  server.pid
.superpowers/brainstorm/3635994-1781256560/content/: schedule-mobile.html  schedule-v2.html  schedule-v3.html
.superpowers/brainstorm/3635994-1781256560/state/: server-info
debian/: README.Debian  README.source  changelog  control  copyright  install  rules  windmi-controller.conf
docs/: CONVERSION_PLAN.md  DEMO_MODE_PLAN.md  LOGGING_MIGRATION_PLAN.md  SELFTEST_REFACTOR_PLAN.md  SERIAL_PORT_PLAN.md  TEST_PLAN_AND_FIX_IMPLEMENTATION.md  coding-style.md  dhw_priority_report.md  download_manual.sh  header_example.hpp  learned.md  read_example.cpp  rotenso_windmi_manual_summary.md  windows-build-instructions.md  windows-platform-support.md  working-modes.md
docs/doxygen/: Doxyfile
docs/superpowers/plans/: 2026-05-24-rotenso-windmi-controller.md  2026-06-06-energy-monitoring-improvements.md  2026-06-06-windows-build-implementation.md  2026-06-06-windows-platform-support-investigation.md  2026-06-07-msvc-native-windows-platform.md  2026-06-07-platform-abstraction-completion.md  2026-06-07-weekly-schedule-implementation.md
docs/superpowers/specs/: 2026-05-24-rotenso-windmi-controller-design.md  2026-06-07-dhw-hysteresis-rollback-and-new-registers-design.md  2026-06-07-refactor-coding-guidelines-design.md  2026-06-07-settings-persistence-design.md  2026-06-07-test-coverage-gap-fill.md  2026-06-07-weekly-schedule-design.md  2026-06-08-additional-test-cases-plan.md
googletest/: CMakeLists.txt
include/: config.h  crc16.h  modbus_client.h  selftest.hpp
include/core/: ControlLoop.hpp  StatusMonitor.hpp
include/modbus/: IModbusClient.hpp  ModbusClient.hpp  ModbusSerialClient.hpp  SimulatedModbusClient.hpp  modbus_rtu_frame.h  modbus_serial_client.h
include/utils/: Config.hpp  JsonHelpers.hpp  LogTags.hpp  Logger.hpp  LoggerC.h  Platform.hpp  PlatformC.h  SpscQueue.hpp
include/web/: WebServer.hpp
src/: config.h  control_loop.c  control_loop.h  crc16.c  crc16.cpp  crc16.h  main.c  main.c.bak  main.cpp  modbus_client.c  modbus_client.h  selftest.c  selftest.cpp  selftest.h  spsc_queue.h  web_server.c  web_server.h
src/core/: CMakeLists.txt  ControlLoop.cpp  StatusMonitor.cpp
src/modbus/: CMakeLists.txt  ModbusClient.cpp  ModbusSerialClient.cpp  SimulatedModbusClient.cpp  modbus_rtu_frame.c  modbus_serial_client.c
src/utils/: CMakeLists.txt  Config.cpp  JsonHelpers.cpp  Logger.cpp  LoggerC.cpp  Platform.cpp  SpscQueue.cpp
src/web/: CMakeLists.txt  WebServer.cpp
static/: app.js  index.html  style.css
tests/: test_control_logic.c  test_crc16.c  test_modbus_frames.c  test_spsc_queue.c
tests/core/: CMakeLists.txt  test_control_loop.cpp  test_control_loop_errors.cpp  test_main_args.cpp  test_main_signal.cpp  test_selftest.cpp  test_status_monitor.cpp
tests/modbus/: CMakeLists.txt  test_modbus_client.cpp  test_modbus_client_c.cpp  test_modbus_rtu_frame.cpp  test_modbus_serial_client.cpp
tests/tools/: CMakeLists.txt  probe_registers.c
tests/utils/: CMakeLists.txt  test_config.cpp  test_crc16.cpp  test_json_helpers.cpp  test_logger.cpp  test_platform.cpp  test_platform_mutex.cpp  test_platform_thread.cpp
tests/web/: CMakeLists.txt  test_http_client.cpp  test_web_server.cpp  test_web_server_api.cpp  test_web_server_concurrent.cpp  test_web_server_static.cpp
